<resources>
    <string name="app_name">Мой ТПУ</string>
    <string name="schedule_updated">Обновление расписания</string>
    <string name="new_schedule_available">Доступно новое расписание</string>
    <string name="schedule_updates_channel">Обновления расписания</string>
    <string name="schedule_updates_channel_desc">Уведомления об изменениях в расписании</string>
    <string-array name="week_days">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
    <string name="widget_title">Расписание</string>
    <string name="widget_description">Расписание занятий</string>
    <string name="navigation_drawer_open">Открыть боковое меню?</string>
    <string name="navigation_drawer_close">Ща закрою</string>
    <string name="allow_remote_resources">Разрешить внешние ресурсы</string>
    <string name="enter_message">Введите сообщение</string>
    <string name="message_sent">Сообщение отправлено</string>
    <string name="send_error">Ошибка отправки</string>
    <string name="email_deleted">Письмо удалено</string>
    <string name="delete_error">Ошибка удаления</string>
    <string name="marked_unread">Помечено как непрочитанное</string>
    <string name="mark_error">Ошибка пометки</string>
    <string name="reply">Ответить</string>
    <string name="reply_all">Ответить всем</string>
    <string name="forward">Переслать</string>
    <string name="more_actions">Ещё</string>
    <string name="write_reply">Написать ответ…</string>
    <string name="send">Отправить</string>
    <string name="attachment_preview">Превью вложения</string>
    <string name="view">Просмотреть</string>
    <string name="download">Скачать</string>
    <string name="fullscreen_image_desc">Full screen image</string>
</resources>